# ChangeLog for sys-auth/sssd
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru> +sssd-1.4.1.ebuild,
  +metadata.xml:
  initial rekommit from my dew overlay
